...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/story_app_logo"
        app:tint="?colorOnBackground" />

    <ImageView
        android:id="@+id/imgLogout"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/logout"
        android:src="@drawable/baseline_logout_24"
...
